argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: battleships
  labels:
    name: battleships
