argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypy
  namespace: battleships
  labels:
    app: mypy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mypy
  template:
    metadata:
      labels:
        app: mypy
    spec:
      containers: 
        - name: mypy
          image: ghcr.io/eugenioff/test-service:latest
          ports:
            - containerPort: 8081
