argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myPy
  namespace: battleships

spec:
  selector:
    app: myPy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
